--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
-    "wolfram": "^0.3.2"
+    "lodash": "^4.3.0",
+    "wolfram": "^0.3.2",
+    "xml2js": "^0.4.16"
   },
   "engines": {
     "node": "0.10.x"
