--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "hubot-slack": "^3.4.2",
     "lodash": "^4.3.0",
     "wolfram": "^0.3.2",
-    "xml2js": "^0.4.16"
+    "xml2js": "^0.4.16",
+    "hubot-cron": ">= 0.1.0"
   },
   "engines": {
     "node": "0.10.x"
